--- a/data/build.gradle
+++ b/data/build.gradle
@@ -64,8 +64,10 @@ dependencies {
 
     //Coroutines
     def coroutines_version ="1.4.2"
+//    def coroutines_play_services_version ="1.5.0"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+//    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:$coroutines_play_services_version"
 
     //Room
     def room_version ="2.3.0-rc01"
