--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
         -->
         <meta-data
                 android:name="com.google.android.geo.API_KEY"
-                android:value="BuildConfig.Google_API_KEY"/>
+                android:value="@string/Google_API_KEY"/>
 
         <activity android:name=".ui.main.MainActivity">
         </activity>
